--- a/Index.html
+++ b/Index.html
@@ -30,7 +30,7 @@
     <header class="cyberpunk-bg header-glitch">
         <div class="header-container">
             <div class="profile-pic neon-frame">
-                <img src="assets/images/harikesh.jpg" alt="Harikesh Profile Picture">
+                <img src="/storage/emulated/0/Download/spritesheet (1).png" alt="Harikesh Profile Picture">
             </div>
             <div class="header-text">
                 <h1 class="neon-text type-effect" data-text="Harikesh">Harikesh</h1>
